@@ -251,6 +251,8 @@ Major changes from 1.9.0-jumbo-1 (May 2019) in this bleeding-edge version:
   removing the CPU bottleneck.  This work was funded by the Tezos Foundation.
   [Solar; 2021]
 
+- Added suport for PBKDF2-SHA256 key derivation algorithm of PrivateAccess and 
+  ENCDataVault. [sylvainpelissier; 2022]
 
 Major changes from 1.8.0-jumbo-1 (December 2014) to 1.9.0-jumbo-1 (May 2019):
 
